<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/RLTopLayout"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:background="@drawable/rectangle_blue"
                    android:visibility="visible">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="120dp">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:background="@drawable/rectangle_white"
                            android:paddingTop="40dp"
                            android:paddingBottom="40dp">

                            <ImageView
                                android:id="@+id/IMIcon"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/icon_tr" />

                            <TextView
                                android:id="@+id/TVTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/IMIcon"
                                android:layout_centerHorizontal="true"
                                android:text="@string/app_name"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/home_app_title"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/TVTitle"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="5dp"
                                android:text="@string/tag_line"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/home_tag_line"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </RelativeLayout>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/lnr_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/RLTopLayout"
                    android:layout_marginTop="-120dp"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">

                    <RelativeLayout
                        android:id="@+id/RLTopMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/rectangle_white"
                        android:elevation="3dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <RelativeLayout
                                    android:id="@+id/rvWhatsApp"
                                    android:layout_width="match_parent"
                                    android:layout_height="200dp"
                                    android:layout_weight="1">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_centerInParent="true"
                                        android:gravity="center"
                                        android:orientation="vertical">

                                        <ImageView
                                            android:layout_width="80dp"
                                            android:layout_height="80dp"
                                            android:background="@drawable/circle"
                                            android:contentDescription="@string/todo"
                                            android:padding="12dp"
                                            android:src="@drawable/whatsapp_logo" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center"
                                            android:layout_marginTop="5dp"
                                            android:gravity="center"
                                            android:text="@string/whatsapp_app_name"
                                            android:textColor="@color/colorPrimary"
                                            android:textSize="24dp" />
                                    </LinearLayout>
                                </RelativeLayout>


                            </LinearLayout>









                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/rectangle_white"
                        android:elevation="3dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="20dp"
                        android:weightSum="4">

                        <RelativeLayout
                            android:id="@+id/rvGallery"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:background="@drawable/circle"
                                    android:padding="12dp"
                                    android:src="@drawable/ic_gallery" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/gallery_name"
                                    android:layout_marginTop="5dp"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="@dimen/home_item_txt_size" />
                            </LinearLayout>
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/rvAbout"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:background="@drawable/circle"
                                    android:padding="12dp"
                                    android:src="@drawable/ic_about" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/aboutus_name"
                                    android:layout_marginTop="5dp"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="@dimen/home_item_txt_size" />
                            </LinearLayout>
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/rvShareApp"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:background="@drawable/circle"
                                    android:padding="12dp"
                                    android:src="@drawable/ic_share" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/share_app_name"
                                    android:layout_marginTop="5dp"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="@dimen/home_item_txt_size" />
                            </LinearLayout>

                        </RelativeLayout>
                        <RelativeLayout
                            android:id="@+id/rvRateApp"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:background="@drawable/circle"
                                    android:padding="12dp"
                                    android:src="@drawable/ic_rate" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/rate_app_name"
                                    android:layout_marginTop="5dp"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="@dimen/home_item_txt_size" />
                            </LinearLayout>

                        </RelativeLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/rvMoreApp"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"

                        android:background="@drawable/rectangle_white"
                        android:elevation="3dp">

                        <ImageView
                            android:id="@+id/im_MoreApp"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/circle"
                            android:padding="12dp"
                            android:src="@drawable/ic_more" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="10dp"
                            android:layout_toStartOf="@+id/imArrow9"
                            android:layout_toEndOf="@+id/im_MoreApp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="3dp"
                                android:text="@string/more_app_name"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/home_above" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="3dp"
                                android:text="@string/more_app_tag"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/home_below_ttxt" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/imArrow9"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_arrow" />
                    </RelativeLayout>

                    <!--Added for Language Tag : Start-->

                    <!--Added for Language Tag :End-->
                </LinearLayout>


            </RelativeLayout>


    </RelativeLayout>
</layout>